Filtering works on mobile, fixing filtering when "adding" specialist from other specialties

--- a/app/assets/stylesheets/all/bootstrap.responsive.css.scss
+++ b/app/assets/stylesheets/all/bootstrap.responsive.css.scss
@@ -1014,12 +1014,30 @@
       }
     }
   }
+  .toggle-filters
+  {
+    background-color: $FNW_HEADLINE_BACKGROUND;
+    display: block;
+    height: 30px;
+    margin: 0px -10px 10px -10px;
+    padding: 0 10px;
+    line-height: 30px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 11px;
+  }
   .well.filter
   {
     display: none;
     position: absolute;
-    top: 0;
+    top: 40px;
     left: 0;
+    z-index: 1;
+    
+    .title
+    {
+      display: none;
+    }
   }
   .btn-group .btn
   {
